--- a/frontend-react/src/styles/BodyChat.module.css
+++ b/frontend-react/src/styles/BodyChat.module.css
@@ -1,18 +1,30 @@
 .container {
     /* border: 2px solid blue; */
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
+    /* flex-direction: column;
+    align-items: center; */
     
     position: relative;
     overflow-y: auto;
-    height: 100vh;
+    height: 100%;
 
+}
+
+.containerTwo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* border: 1px solid chartreuse; */
+    padding: 1em .7em;
+    padding-top: 1.6em;
+    width: 550px;
 }
 
 .messages {
     /* width: 768px; */
-    max-width: 500px;
+    max-width: 510px;
+    width: 100%;
     /* border: 1px solid white; */
 
     flex: 1;
@@ -20,7 +32,6 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding-top: 1em;
     margin-bottom: 2em;
 
 }
@@ -35,7 +46,7 @@
     display: flex;
     align-items: flex-start;
     gap: 0.5rem;
-
+    
     justify-content: flex-end;
 }
 
@@ -67,6 +78,7 @@
     background-color: #15DB95;
     color: #000000;
     align-self: flex-end;
+    max-width: 60%; /* Esto para limitar el tamaño del la caja del usuario y se mantenga a la derecha*/
 }
 
 .icons {
