--- a/frontend-react/src/styles/BoxTextAI.module.css
+++ b/frontend-react/src/styles/BoxTextAI.module.css
@@ -7,20 +7,26 @@
     gap: 5px;
     border-radius: 1.5em;
     max-height: 210px;
-    width: 510px;
+    width: 95%;
+    max-width: 510px;
+    height: 40px;
     position:sticky;
-    bottom: 1.5em;
+    bottom: 0;
 
+    /* border: 1px solid white; */
 }
 
 .inputBox {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    word-spacing: 2px;
+    align-self: stretch;
     width: 100%;
     background-color: inherit;
     border-radius: .5em;
     font-size: 16px;
-    padding: .6em;
+    padding: .5em;
     padding-bottom: .2em;
-  
+
     outline: none;
     resize: none;
     border: none;
@@ -52,4 +58,12 @@
     width: 38px;
     border-radius: 50%;
     cursor: pointer;
+}
+
+
+@media (width <= 400px) {
+  .box {
+    /* border-bottom-left-radius: initial;
+    border-bottom-right-radius: initial; */
+  }
 }
