--- a/frontend-react/src/styles/Header.module.css
+++ b/frontend-react/src/styles/Header.module.css
@@ -2,7 +2,7 @@
 .header {
     /* border: 1px solid white; */
     padding: .8em 1em;
-    position: absolute;
+    /* position: absolute; */
     /* right: 30px; */
   }
   
