--- a/frontend-react/src/styles/Titles.module.css
+++ b/frontend-react/src/styles/Titles.module.css
@@ -8,7 +8,7 @@
     width: 350px;
     height: 480px;
     margin: 1em;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .header {
@@ -36,4 +36,19 @@
     background-color: var(--grey-color);
     border-radius: 1.5em;
     padding: .5em 1em;
+    text-decoration: none;
+    color: whitesmoke;
+
+    transition-property: background-color;
+    transition-duration: .4s;
+}
+
+.title:hover {
+    background-color: #191818;
+}
+
+@media (width <= 1360px) {
+    .article {
+        display: none;
+    }
 }
