--- a/frontend-react/src/styles/Titles.module.css
+++ b/frontend-react/src/styles/Titles.module.css
@@ -27,6 +27,7 @@
 .containerTitles {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 15px;
     padding: .7em 1em;
     
