--- a/frontend-react/src/index.css
+++ b/frontend-react/src/index.css
@@ -1,11 +1,14 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
 
-  --green-color: #15DB95;
-  /* --green-color: rgb(1,28,39); */
+  /* --green-color: #15DB95; */
+  --green-color: #34c3ae;
+  --header-color: #040B15;
+  --title-color: #11243d;
+  --main-color: #040b159f;
+  --scroll-color: #7c7979;
   --grey-color: #323232;
+  --letra-color: #F5F5F5;
 }
 
 * {
@@ -14,13 +17,32 @@
   box-sizing: content-box;
 }
 
-#root {
-  height: 100%;
+body {
+  height: 100vh;
+  color: var(--letra-color);
+  overflow: hidden;
 }
 
-body, html {
+#root {
+  height: 100vh;
   overflow: hidden;
-  height: 100%; /* magia !! importante para que el contenido del chay la caja quepan y no desborden */
+}
+
+
+/* Estilos para el scroll */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  /* background-color: #b9afaf; */
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #323232;
+  background-color: #7c7979;
+  border-radius: 10px;
 }
 
 
