--- a/frontend-react/src/styles/BodyChat.module.css
+++ b/frontend-react/src/styles/BodyChat.module.css
@@ -1,105 +1,146 @@
-.container {
-    /* border: 2px solid blue; */
-    display: flex;
-    justify-content: center;
-    /* flex-direction: column;
-    align-items: center; */
-    
-    position: relative;
-    overflow-y: auto;
-    height: 100%;
-
+.main {
+  display: flex;
+  background-color: rgb(54, 53, 53);
+  height: 100vh;
+  overflow: hidden;
 }
 
-.containerTwo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* border: 1px solid chartreuse; */
-    padding: 1em .7em;
-    padding-top: 1.6em;
-    width: 550px;
+.sidechat {
+  flex: 4;
+  display: flex;
+  flex-direction: column;
 }
 
-.messages {
-    /* width: 768px; */
-    max-width: 510px;
-    width: 100%;
-    /* border: 1px solid white; */
-
-    flex: 1;
-    /* overflow-y: auto; */
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin-bottom: 2em;
-
+/* COMPONENTE HeaderChat */
+.headerChat {
+  background-color: #040B15;
+  flex: 1;
+  padding: .5em .8em;
 }
 
-.messageRowBot {
-    display: flex;
-    align-items: flex-start;
-    gap: 0.5rem;
+.logoContainer {
+  /* background-color: aqua; */
+  width: 190px;
 }
 
-.messageRowUser {
-    display: flex;
-    align-items: flex-start;
-    gap: 0.5rem;
-    
-    justify-content: flex-end;
+.logoBanquea {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.avatar {
-    background-color: #323232;
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    flex-shrink: 0;
-  }
+
+.chatContainer {
+  /* background-color: saddlebrown; */
+  background-color: #040b159f;
+  flex: 14;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.chatMessagesContainer {
+  display: flex;
+  justify-content: center;
+  overflow-y: scroll;
+  padding: 0.5em;
+  flex: 1;
+}
+
+.chatMessages {
+  /* border: 1px solid black; */
+  padding: 0.5em 0.4em;
+  width: 70%;
+  height: auto;
+  max-width: 768px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.messageRow {
+  display: flex;
+  align-items: flex-start;
+  gap: 0.5rem;
+  /* width: 600px; */
+  /* justify-content: flex-end; */
+}
+
+.messageRow.user {
+  justify-content: flex-end;
+  
+}
 
 .message {
-    max-width: 100%;
-    padding: 0.75rem 1rem;
-    border-radius: 1rem;
-    font-size: 0.95rem;
-    /* background-color: #000000; */
-    /* border: 1px solid #15DB95; */
-    border: 1px solid #373434;
-    border: 1px solid var(--grey-color);
+  max-width: 80%;
+  padding: 0.75rem 1rem;
+  border-radius: 1rem;
+  font-size: 0.95rem;
+
+  /* border: 1px solid #15DB95; */
+}
+.message.bot {
+  /* background-color: #6B7280; */
+  color: var(--letra-color);
+  align-self: flex-start;
+  line-height: 1.8;
+}
+
+.message.user {
+  background-color: var(--green-color);
+  color: #000000;
+  color: var(--header-color);
+  align-self: flex-end;
 }
 
 
-.messageUser {
-    background-color: #15DB95;
-    color: #000000;
-    align-self: flex-end;
-    max-width: 60%; /* Esto para limitar el tamaño del la caja del usuario y se mantenga a la derecha*/
+/* Avatar circular */
+.avatar {
+  background-color: #323232;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--letra-color);
+  flex-shrink: 0;
 }
 
 .icons {
-    /* border: 1px solid white; */
-    padding-top: .5em;
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    gap: 10px;
-    font-size: 1.1em;
+  /* border: 1px solid white; */
+  padding-top: 0.5em;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+  font-size: 1.1em;
 }
 
 .icons div {
-    /* border: 1px solid white; */
-    background-color: var(--grey-color);
-    padding: 0 .5em ;
-    border-radius: .5em;
-    cursor: pointer;
+  /* border: 1px solid white; */
+  background-color: var(--grey-color);
+  padding: 0 0.5em;
+  border-radius: 0.5em;
+  cursor: pointer;
 }
 
 .bot {
-    align-self: flex-start;
-    line-height: 1.8;
+  align-self: flex-start;
+  line-height: 1.8;
 }
+
+@media (width <= 985px) {
+  .chatMessages {
+    width: 80%;
+  }
+}
+
+
+
+
+
+
+
