--- a/frontend-react/src/styles/BoxTextAI.module.css
+++ b/frontend-react/src/styles/BoxTextAI.module.css
@@ -1,69 +1,65 @@
-.box {
-    background-color: var(--grey-color);
-    padding: 12px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 5px;
-    border-radius: 1.5em;
-    max-height: 210px;
-    width: 95%;
-    max-width: 510px;
-    height: 40px;
-    position:sticky;
-    bottom: 0;
-
-    /* border: 1px solid white; */
+.inputContainer {
+  display: flex;
+  justify-content: center;
+  padding: 0.5em;
+  padding-bottom: 1.2em;
+  /* border: 1px solid white; */
 }
 
 .inputBox {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    word-spacing: 2px;
-    align-self: stretch;
-    width: 100%;
-    background-color: inherit;
-    border-radius: .5em;
-    font-size: 16px;
-    padding: .5em;
-    padding-bottom: .2em;
-
-    outline: none;
-    resize: none;
-    border: none;
-    /* border: 1px solid wheat; */
-    overflow-y: auto;
-    color: white;
+  width: 70%;
+  max-width: 768px;
+  background-color: #323232;
+  padding: 0.5em 1em;
+  border-radius: 0.8em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5px;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 
-.inputBox::placeholder {
-    color: rgba(255, 255, 255, 0.695);
-    font-family: sans-serif;
-  
-  }
-  
-  .inputBox:focus {
-    outline: none;
-  }
-
-
-.wrapperIcon {
-    font-size: 1.1em;
-    background-color: #15DB95;
-    border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: flex-end;
-    height: 35px;
-    width: 38px;
-    border-radius: 50%;
-    cursor: pointer;
+.inputMessage {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  width: 100%;
+  background-color: inherit;
+  border-radius: inherit;
+  font-size: 16px;
+  line-height: 1.2;
+  padding: 0.7em 0.1em;
+  letter-spacing: .1px;
+  padding-bottom: 0;
+  outline: none;
+  max-height: 200px;
+  resize: none;
+  border: none;
+  /* border: 1px solid wheat; */
+  overflow-y: auto;
+  color: white;
 }
 
+.inputMessage::placeholder {
+  color: rgba(255, 255, 255, 0.695);
+  font-family: sans-serif;
+}
 
-@media (width <= 400px) {
-  .box {
-    /* border-bottom-left-radius: initial;
-    border-bottom-right-radius: initial; */
+.sendButton {
+  background-color: var(--green-color);
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-end;
+  height: 35px;
+  width: 38px;
+  border-radius: 50%;
+  cursor: pointer;
+  color: var(--grey-color);
+}
+
+@media (width <= 985px) {
+  .inputBox {
+    width: 80%;
   }
 }
