--- a/frontend-react/src/index.css
+++ b/frontend-react/src/index.css
@@ -14,17 +14,18 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
+
 body {
-  height: 100vh;
+  height: 100dvh;
   color: var(--letra-color);
   overflow: hidden;
 }
 
 #root {
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
 }
 
@@ -105,7 +106,6 @@ body {
   box-sizing: border-box;
   animation: rotation 2s linear infinite;
   align-self: center;
-  margin-top: 10em;
 }
 
 @keyframes rotation {
