--- a/frontend-react/src/styles/BoxTextAI.module.css
+++ b/frontend-react/src/styles/BoxTextAI.module.css
@@ -24,7 +24,6 @@
   Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   width: 100%;
   background-color: inherit;
-  border-radius: inherit;
   font-size: 16px;
   line-height: 1.2;
   padding: 0.7em 0.1em;
@@ -63,3 +62,12 @@
     width: 80%;
   }
 }
+
+@media (width <= 660px) {
+  .inputBox {
+    width: 100%;
+    border-radius: 1.2em;
+  }
+
+}
+
