--- a/frontend-react/src/styles/Sidebar.module.css
+++ b/frontend-react/src/styles/Sidebar.module.css
@@ -1,73 +1,79 @@
 .sidebar {
-  flex: 1; /* flex-grow: 1; flex-shrink: 1; flex-basis: 0; */
-  /* border: 1px solid brown; */
+  /* flex: 1; */
   background-color: var(--header-color);
   display: flex;
   flex-direction: column;
-}
+  height: 85dvh;
+  width: 330px;
+  transition: width 0.5s ease;
+  overflow: hidden;
 
-.headerSidebar {
-    padding: 1em;
-}
+  position: absolute;
+  top: 70px;
 
+}
 
 .article {
-    /* flex: 14; */
-    border-radius: 2em;
-    border: 1px solid var(--grey-color);
+    /* border: 1px solid greenyellow; */
     width: 100%;
+    height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
+    /* overflow-y: hidden; */
     overflow-y: scroll;
-
+    overflow-x: hidden;
 }
-
-.iconContainer {
-    margin-left: auto;
-    width: 25px;
-    height: 25px;
-    border: 1px solid whitesmoke;
-    border-radius: .5em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    background-color: var(--grey-color);
-}
-
 
 .container {
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
-    /* border: 1px solid white; */
-    /* padding: .5em 0;
-    /* border: 1px solid white; */
-    height: 96%;
+    height: 100%;
+    /* border: 1px solid whitesmoke; */
 
 }
 
 .header {
     text-align: center;
-    border-bottom: 1px solid var(--grey-color);
+    flex: 0 0 auto;
+    /* border-bottom: 1px solid var(--grey-color); */
 }
-
-.headerTitle {
-    font-size: 1.7em;
-}
-
 
 .containerTitles {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     gap: 15px;
-    padding: .7em 1em;
-    overflow-y: hidden;
+    padding: 1em;
+    /* overflow-y: scroll; */
+    flex: 1 1 auto;
+    /* border: 1px solid red; */
 }
 
+
+
+
+
+
+.sidebarHidden {
+    width: 0;
+}
+
+
+
+.headerTitle {
+    font-size: 1.7em;
+    padding-top: .3em;
+    padding-bottom: .5em;
+    /* position: fixed; */
+    /* z-index: -12; */
+}
+
+
 .title {
+    min-width: 300px;
+    width: 100%;
     background-color: var(--title-color);
     border-radius: 1.1em;
     padding: .5em 1em;
@@ -81,4 +87,11 @@
 
 .title:hover {
     background-color: var(--grey-color);
+}
+
+@media (width <= 450px) {
+    .sidebar {
+        border-top-right-radius: .8em;
+        border-bottom-right-radius: .8em;
+    }
 }
